fixes alignment on classes https://github.com/JustOpine/JustOpine/issues/128 + makes classes mobile friendly

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,12 +133,13 @@ nav {
   margin: 20px auto;
   padding: 40px;
   text-align: center; }
+  .classes-container .add-class-button-container {
+    display: block;
+    margin-bottom: 40px; }
   .classes-container button {
     background-color: #26C6DA;
-    display: block;
+    display: inline-block;
     float: right; }
-  .classes-container div:first-of-type {
-    margin-top: 40px; }
 
 .class-div {
   background-color: #E0F7FA;
@@ -200,6 +201,9 @@ nav {
       display: block;
       margin: 15px auto 0 auto; }
 
+@media (max-width: 900px) {
+  .class-div {
+    margin: 20px; } }
 .student-list {
   background-color: white;
   -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
